--- a/stylesheet.css
+++ b/stylesheet.css
@@ -167,7 +167,7 @@ nav ul li .Booking-btn:hover {
 /* DIPTA  */
 .container2 {
     max-width: 1170px;
-    padding: 50 15px;
+    padding: 50px 15px;
     margin: 0 auto;
 }
 
