--- a/stylesheet.css
+++ b/stylesheet.css
@@ -167,7 +167,10 @@ nav ul li .Booking-btn:hover {
 /* DIPTA  */
 .container2 {
     max-width: 1170px;
-    padding: 50px 15px;
+	padding-top:50px;
+	padding-bottom:10px;
+	padding-right:15px;
+	padding-left:15px
     margin: 0 auto;
 }
 
